Commit for PluralSight Project